<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.view.MapFragment"
        android:label="@string/title_map_view"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myapplication.ui.view.RestaurantListFragment"
        android:label="@string/title_list_view"
        tools:layout="@layout/fragment_restaurant_list" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myapplication.ui.view.CoworkerListFragment"
        android:label="@string/title_Workmates"
        tools:layout="@layout/fragment_coworker" />
</navigation>